
2008-09-01  Sancho Lerena <slerena@gmail.com>

	* integria.css: Starting to do things to render
	properly in IE.
	
	* functions_db.php: This should fix the mails with anoying 
	HTML entities.

2008-08-05  Sancho Lerena <slerena@gmail.com>

	* integria_db.sql: Added end field to task.

	* operation/projects/task_detail.php: Added end field.

	* operation/projects/gantt_graph.php: Added end field on task
	and removed previous code to recalculate using hours assigned.

	* operation/projects/task.php: Added end field.

	* include/functions.php: Added functions clean_output and remove_locale_chars.

2008-07-29  Sancho Lerena <slerena@gmail.com>
	
	* operation/kb/browse_data.php: New page to vide KB items.

	* operation/kb/manage_prod.php: Solved some minor bugs.

	* operation/kb/manage_data.php: Solved some minor bugs.

	* operation/kb/browse.php: New page to browse/search
	KB items.

	* operation/side_menu.php: Delete KB Search (nosense)

	* include/functions.php: Updated some functions (minor).

2008-07-22  Sancho Lerena <slerena@gmail.com>

	* include/functions_form.php: Fixed problem adding
	people to tasks.

2008-07-08  Sancho Lerena <slerena@gmail.com>

    * setup.php, config_process.php,
    integria_dbdata.sql: Added notification_period config token 

    * event.php: Better aliment for columns.
    
    * integria.ico. New icon.

    * functions.php: Clean input now converts all data on html
    equivalente. function ascii_output() makes the inverse operation.
    topi_sendmail uses ascii_output by default.

    * incident.php: also shows incident creation timestamp.

    * integria_cron.php: SLA enforment system. Running under a 
    cron tasks, check that all SLA conditions are right. If not
    send emails to each incident responsible and generate an event.

2008-07-01  Sancho Lerena <slerena@gmail.com>

	* operation/projects/task.php: Task order by name,

	* include/functions_db.php: Deletion of a task: assign wu to 